--- a/Diagnosis.App/Windows/Editors/PatientEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/PatientEditorWindow.xaml
@@ -15,14 +15,39 @@
         ShowInTaskbar="False"
         ResizeMode="NoResize"
         mc:Ignorable="d"
+        diag:HelpProvider.Topic="addpat"
         d:DataContext="{d:DesignInstance diag:PatientEditorViewModel, IsDesignTimeCreatable=False}">
     <Window.Resources>
     </Window.Resources>
-    <Grid Margin="10">
+    
+    <DockPanel>
+        <Button VerticalAlignment="Top"
+                HorizontalAlignment="Right"
+                DockPanel.Dock="Right"
+                Height="30"
+                Width="30"
+                Foreground="{Binding BorderBrush, RelativeSource={RelativeSource Self}}"
+                BorderThickness="1"
+                Style="{DynamicResource MetroCircleButtonStyle}"
+                Command="{x:Static ApplicationCommands.Help}"
+                diag:HelpProvider.Topic="addpat"
+                Focusable="False"
+                >
+            <Rectangle Width="12"
+                       Height="12"
+                       Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+                <Rectangle.OpacityMask>
+                    <VisualBrush Stretch="Uniform"
+                                 Visual="{DynamicResource appbar_question}" />
+                </Rectangle.OpacityMask>
+            </Rectangle>
+        </Button>
+        <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
+
 
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel  DataContext="{Binding Patient}"
@@ -118,5 +143,6 @@
                     Command="{Binding CancelCommand}"
                     Content="Отмена" />
         </StackPanel>
-    </Grid>
+        </Grid>
+    </DockPanel>
 </Window>
