--- a/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
+++ b/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
@@ -139,6 +139,8 @@
                 Value="False" />
         <Setter Property="IsReadOnly"
                 Value="True" />
+        <Setter Property="CanUserReorderColumns"
+                Value="False" />
         <Setter Property="SelectionUnit"
                 Value="FullRow" />
         <Setter Property="SelectionMode"
