sync. Add server sync form
--HG--
branch : f/syncframework

--- a/Diagnosis.ServerApp/Windows/MainWindow.xaml
+++ b/Diagnosis.ServerApp/Windows/MainWindow.xaml
@@ -28,6 +28,9 @@
     </Window.Resources>
     <Grid>
         <TabControl>
+            <TabItem Header="Синхронизация">
+                <screens:Sync />
+            </TabItem>
             <TabItem Header="Единицы">
                 <screens:Uoms />
             </TabItem>
