--- a/Diagnosis.App/Windows/Editors/PatientEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/PatientEditorWindow.xaml
@@ -8,84 +8,69 @@
         xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
         xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
-        Height="350"
         Width="500"
+        SizeToContent="Height"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         diag:FocusBehavior.FocusFirst="True"
+        diag:HelpProvider.Topic="addpat"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
         mc:Ignorable="d"
-        diag:HelpProvider.Topic="addpat"
         d:DataContext="{d:DesignInstance diag:PatientEditorViewModel, IsDesignTimeCreatable=False}">
     <Window.Resources>
     </Window.Resources>
-    
-    <DockPanel>
-        <Button VerticalAlignment="Top"
-                HorizontalAlignment="Right"
-                DockPanel.Dock="Right"
-                Height="30"
-                Width="30"
-                Foreground="{Binding BorderBrush, RelativeSource={RelativeSource Self}}"
-                BorderThickness="1"
-                Style="{DynamicResource MetroCircleButtonStyle}"
-                Command="{x:Static ApplicationCommands.Help}"
-                diag:HelpProvider.Topic="addpat"
-                Focusable="False"
-                >
-            <Rectangle Width="12"
-                       Height="12"
-                       Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
-                <Rectangle.OpacityMask>
-                    <VisualBrush Stretch="Uniform"
-                                 Visual="{DynamicResource appbar_question}" />
-                </Rectangle.OpacityMask>
-            </Rectangle>
-        </Button>
-        <Grid Margin="10">
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
+        <Button  Grid.Column="1"
+                 Style="{StaticResource HelpButton}"
+                 diag:HelpProvider.Topic="addpat" />
 
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <StackPanel  DataContext="{Binding Patient}"
-                         d:DataContext="{d:DesignInstance diag:PatientViewModel}">
-                <StackPanel.Resources>
-                    <Style TargetType="DockPanel"
-                           BasedOn="{StaticResource formLine}" />
-                    <Style TargetType="Label"
-                           BasedOn="{StaticResource label120}" />
-                </StackPanel.Resources>
-                <Grid Margin="0 0 0 10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+        <StackPanel  DataContext="{Binding Patient}"
+                     Margin="10,10,0,0"
+                     d:DataContext="{d:DesignInstance diag:PatientViewModel}">
+            <StackPanel.Resources>
+                <Style TargetType="DockPanel"
+                       BasedOn="{StaticResource formLine}" />
+                <Style TargetType="Label"
+                       BasedOn="{StaticResource label120}" />
+            </StackPanel.Resources>
+            <Grid Margin="0 0 0 10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-                    <Label Content="Имя"
-                           VerticalAlignment="Top" />
-                    <TextBox Text="{Binding FullName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                             Grid.Column="1">
-                        <diag:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource watermark}"
-                                       Margin="5,0,0,0">ФИО</TextBlock>
-                        </diag:WatermarkService.Watermark>
-                    </TextBox>
-                    <TextBlock TextWrapping="Wrap"
-                               Grid.Row="1"
-                               Grid.Column="1">
+                <Label Content="Имя"
+                       VerticalAlignment="Top" />
+                <TextBox Text="{Binding FullName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                         Grid.Column="1">
+                    <diag:WatermarkService.Watermark>
+                        <TextBlock Style="{StaticResource watermark}"
+                                   Margin="5,0,0,0">ФИО</TextBlock>
+                    </diag:WatermarkService.Watermark>
+                </TextBox>
+                <TextBlock TextWrapping="Wrap"
+                           Grid.Row="1"
+                           Grid.Column="1">
                         <Run>Если неизвестно, оставьте пустым, вместо имени будет показано время создания: </Run>
                         <Run  Text="{Binding CreatedAt, Mode=OneWay, StringFormat={}{0:dd.MM.yy hh:mm}.}"
                               FontStyle="Italic" />
-                    </TextBlock>
-                </Grid>
-                <!--<DockPanel>
+                </TextBlock>
+            </Grid>
+            <!--<DockPanel>
                     <Label Content="Имя" />
                     <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>
@@ -93,40 +78,41 @@
                     <Label Content="Отчество" />
                     <TextBox Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
                 </DockPanel>-->
-                <DockPanel>
-                    <Label Content="Дата рождения" />
-                    <editors:ComboBoxDatePicker x:Name="comboDatePicker"
-                                                VerticalAlignment="Top"
-                                                Year="{Binding BirthYear}"
-                                                Month="{Binding BirthMonth}"
-                                                Day="{Binding BirthDay}">
-                    </editors:ComboBoxDatePicker>
-                </DockPanel>
-                <DockPanel>
-                    <Label Content="Возраст" />
-                    <TextBox Text="{Binding Age, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
-                             Width="50"
-                             HorizontalContentAlignment="Right">
-                    </TextBox>
+            <DockPanel>
+                <Label Content="Дата рождения" />
+                <editors:ComboBoxDatePicker x:Name="comboDatePicker"
+                                            VerticalAlignment="Top"
+                                            Year="{Binding BirthYear}"
+                                            Month="{Binding BirthMonth}"
+                                            Day="{Binding BirthDay}">
+                </editors:ComboBoxDatePicker>
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Возраст" />
+                <TextBox Text="{Binding Age, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
+                         Width="50"
+                         HorizontalContentAlignment="Right">
+                </TextBox>
 
-                    <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}"
-                               Margin="3,0,0,0"
-                               VerticalAlignment="Center"></TextBlock>
-                </DockPanel>
-                <DockPanel>
-                    <Label Content="Пол"
-                           VerticalAlignment="Top" />
-                    <editors:SexChooser HorizontalAlignment="Left"
-                                        VerticalAlignment="Center"
-                                        WithUnknown="True" />
-                </DockPanel>
-            </StackPanel>
-        </ScrollViewer>
+                <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}"
+                           Margin="3,0,0,0"
+                           VerticalAlignment="Center"></TextBlock>
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Пол"
+                       VerticalAlignment="Top" />
+                <editors:SexChooser HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    WithUnknown="True" />
+            </DockPanel>
+        </StackPanel>
 
         <StackPanel Grid.Row="1"
-                    Style="{StaticResource DialogButtonsPanel}">
+                    Margin="0,0,10,10"
+                    Style="{StaticResource DialogButtonsPanel}"
+                    Grid.ColumnSpan="2">
             <Button Name="saveOpenAppButton"
-                    Command="{Binding SaveAndOpenAppCommand}"                    
+                    Command="{Binding SaveAndOpenAppCommand}"
                     IsDefault="True"
                     IsEnabled="{Binding IsUnsaved}"
                     Visibility="{Binding IsUnsaved, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -143,6 +129,5 @@
                     Command="{Binding CancelCommand}"
                     Content="Отмена" />
         </StackPanel>
-        </Grid>
-    </DockPanel>
+    </Grid>
 </Window>
