--- a/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
+++ b/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
@@ -92,6 +92,45 @@
                 Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
     </Style>
 
+    <Style x:Key="HelpButton"
+           x:Shared="False"
+           TargetType="Button"           
+           BasedOn="{StaticResource MetroCircleButtonStyle}">
+        <Setter Property="ToolTip"
+                Value="Помощь (F1)" />
+        <Setter Property="Width"
+                Value="30" />
+        <Setter Property="Height"
+                Value="30" />
+        <Setter Property="VerticalAlignment"
+                Value="Top" />
+        <Setter Property="HorizontalAlignment"
+                Value="Right" />
+        <Setter Property="Margin"
+                Value="10 0 0 10" />
+        <Setter Property="Foreground"
+                Value="Gray" />
+        <Setter Property="BorderThickness"
+                Value="1" />
+        <Setter Property="Focusable"
+                Value="False" />
+        <Setter Property="Command"
+                Value="{x:Static ApplicationCommands.Help}" />
+        <Setter Property="Content">
+            <Setter.Value>
+                <Rectangle Width="12"
+                           Height="12"                           
+                           Fill="{Binding Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{DynamicResource appbar_question}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Setter.Value>
+        </Setter>
+
+    </Style>
+
     <!--toolbar-->
     <Style TargetType="ToolBar">
         <Setter Property="ToolBarTray.IsLocked"
