--- a/Diagnosis.App/Controls/CardParts/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecord.xaml
@@ -7,11 +7,12 @@
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              xmlns:diag="http://schemas.smg.com/diagnosis"
+             xmlns:design="clr-namespace:Diagnosis.App.DesignData"
              xmlns:app="clr-namespace:Diagnosis.App"
              mc:Ignorable="d"
              d:DesignHeight="30"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance diag:SampleShortHealthRecordViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance design:SampleShortHealthRecordViewModel, IsDesignTimeCreatable=True}"
              dd:DragDrop.IsDropTarget="{Binding IsDropTargetEnabled}"
              dd:DragDrop.DropHandler="{Binding DropHandler}"
              Background="Transparent"
