--- a/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+        xmlns:design="clr-namespace:Diagnosis.App.DesignData"
         xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
         SizeToContent="Height"
@@ -16,7 +17,7 @@
         ResizeMode="NoResize"
         ShowInTaskbar="False"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance diag:SampleMeasureEditorViewModel,
+        d:DataContext="{d:DesignInstance design:SampleMeasureEditorViewModel,
                                          IsDesignTimeCreatable=False}"
         UseLayoutRounding="True">
     <Grid Margin="0,0,10,10">
