--- a/Diagnosis.App/Windows/IcdSelectorWindow.xaml
+++ b/Diagnosis.App/Windows/IcdSelectorWindow.xaml
@@ -4,13 +4,14 @@
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:diag="http://schemas.smg.com/diagnosis"
+        xmlns:design="clr-namespace:Diagnosis.App.DesignData"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
         Title="{Binding Title}"
         Height="400"
         Width="500"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance diag:SampleIcdSelectorViewModel, IsDesignTimeCreatable=True}"
+        d:DataContext="{d:DesignInstance design:SampleIcdSelectorViewModel, IsDesignTimeCreatable=True}"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         diag:FocusBehavior.FocusFirst="True">
     <Window.Resources>
