--- a/Diagnosis.Client.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.Client.App/Windows/Shell/MenuBar.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance diag:MenuBarViewModel}"
              d:DesignHeight="30"
              d:DesignWidth="600">
     <!-- MenuBarVM -->
@@ -42,6 +44,8 @@
                           Command="{Binding OpenSettingsCommand}" />
                 <MenuItem Header="Версия"
                           Click="MenuItem_Click"/>
+                <MenuItem Header="Открыть папку с базой данных"
+                          Command="{Binding OpenDBFolderCommand}" />
                 <MenuItem Header="_Выйти"
                           Command="{Binding LogoutCommand}" />
             </MenuItem>
